ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-app
  labels:
    app: spring-app
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: spring-<<<NAMESPACE>>>.apps.dpastore.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot-data-json-service
                port:
                  number: 80
